feat: luminar expedition modif

--- a/html/projects/video-games/luminar-expedition.html
+++ b/html/projects/video-games/luminar-expedition.html
@@ -39,15 +39,17 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p id="hashtags"><b>C++</b> <b>No engine</b> <b>Polish</b> <b>Localization</b></p>
-            <p>Overboss is originally a board-game published by Brotherwise Games. To play, the players place tiles and tokens on their board. The goal is to be the one to make the most points. The video game adaptation was made at BlanketGames (formerly TavroxGames) and published by GoblinzStudio. I personnaly worked around six months on the project during my work-study program and the engine used was Unity.</p>
+            <p id="hashtags"><b>C++</b> <b>No engine</b></p>
+            <p>At the end of 2023, I had the chance to participate in the Develop At Ubisoft Program.</p>
+            <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window.</p>
+            <p>Your goal as the player is to secure most of the map to avoid slime spawn and free the mines. As the bearer of the light, everyone is counting on you</p>
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jnkFhjtR9LQ?si=XGipy0GDgKqMvZ13" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yLAeb2AkPhU?si=Kb5dK7Uc2LRO36s2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <p>We were a really small team (with at the peak of the project  three programmers but otherwise two).</p>
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/overboss/overboss-campaign.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/overboss/overboss-multi-local.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/luminar-expedition/le-playing.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/luminar-expedition/le-trophy.jpg" style="width: 49%;">
             </div> 
             <p>One of the first things we did was design a .csv file, basically a table you can open in excel. We thought of three columns : spawn time, life duration and spawn position. In other words : the time in the music at which the target should spawn, how long the target would stay on screen (if you don't shoot it in time it disapears and you loose life) and where it should spawn in the scene. Of course, this organisation would change a lot in the future but those were the basics we needed.</p>
         </div>
@@ -58,8 +60,13 @@
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="https://store.steampowered.com/app/2109390/Overboss/" target="_blank">Discover the game</a>
+                    <a class="external-link" href="https://alvina-dr.itch.io/luminar-expedition" target="_blank">Discover the game</a>
                 </div>
+            </div>
+
+            <div style="margin-top: 1rem;">
+                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Happy to announce I&#39;m part of the <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> program at <a href="https://twitter.com/UbisoftFR?ref_src=twsrc%5Etfw">@UbisoftFR</a> Bordeaux, thanks a lot to @CnamEnjmin for sharing the opportunity ! <br><br>I have a few months to make a game from scratch in C++, you can see my map editor below. <br><br>Now focusing on gameplay :) <a href="https://t.co/zpj10jaqtq">pic.twitter.com/zpj10jaqtq</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1724428613812945368?ref_src=twsrc%5Etfw">November 14, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Been working on my entry for <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> lately and I added camera and light systems. It&#39;s my first time doing all that without a game engine and in C++ so I&#39;m pretty happy with the result :)<a href="https://twitter.com/hashtag/gamedev?src=hash&amp;ref_src=twsrc%5Etfw">#gamedev</a> <a href="https://twitter.com/hashtag/cpp?src=hash&amp;ref_src=twsrc%5Etfw">#cpp</a> <a href="https://t.co/wi2OLEBSWx">pic.twitter.com/wi2OLEBSWx</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1732812619143110810?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </section>
