--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <div class="scroll-text-div">
         <div style="width: 10000000px">
             <div class="scroll-text" >
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . LEVEL DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
             </div>
             <div class="scroll-text">
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . LEVEL DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
             </div>
         </div>
     </div>
