feat: added new pages and updated whole website

--- a/html/projects/video-games/golden-pumpkin.html
+++ b/html/projects/video-games/golden-pumpkin.html
@@ -71,7 +71,7 @@
         <div style="width: 50%;  height: 100%; display: flex; justify-content: center; align-items: center;">
             <p id="right-project" class="next-project-title">Project2</p>
         </div>
-        <button id='right-project-button' class="next-project-button" style="background: linear-gradient(to left, var(--secondary-color), var(--background-color));">►</button>
+        <button id='right-project-button' class="next-project-button next-project-button-right">►</button>
     </section>
 
     <!-- FOOTER -->
