--- a/html/projects/video-games/luminar-expedition.html
+++ b/html/projects/video-games/luminar-expedition.html
@@ -40,13 +40,13 @@
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
             <p id="hashtags"><b>C++</b> <b>No engine</b></p>
-            <p>At the end of 2023, I had the chance to participate in the Develop At Ubisoft Program.</p>
-            <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window.</p>
-            <p>Your goal as the player is to secure most of the map to avoid slime spawn and free the mines. As the bearer of the light, everyone is counting on you</p>
+            <p>At the end of 2023, I had the chance to participate in the <a class="link-in-text" href="https://www.ubisoft.com/en-us/company/careers/interns-graduates/develop-at-ubisoft" target="_blank">Develop At Ubisoft Program</a>.</p>
+            <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window. This was a solo project done in a few months, only working in the evening and the weekend.</p>
+            <p>Your goal as the player is to secure most of the map to avoid slime spawn and free the caves. I wanted to convey the same feeling that I had playing Minecraft, a sense of safeness linked to the light.</p>
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yLAeb2AkPhU?si=Kb5dK7Uc2LRO36s2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <p>We were a really small team (with at the peak of the project  three programmers but otherwise two).</p>
+            <p>I had only used C++ on a few really small projects before, so this was a huge first for me. The fact that we had no engine and everything was done in the code was also really interesting and made this game a big learning experience.</p>
             <div class="div-row" style="width: 100%;">
                 <img src="../../../img/video-games/luminar-expedition/le-playing.jpg" style="width: 49%;">
                 <img src="../../../img/video-games/luminar-expedition/le-trophy.jpg" style="width: 49%;">
@@ -79,7 +79,7 @@
         <div style="width: 50%;  height: 100%; display: flex; justify-content: center; align-items: center;">
             <p id="right-project" class="next-project-title">Project2</p>
         </div>
-        <button id='right-project-button' class="next-project-button" style="background: linear-gradient(to left, var(--secondary-color), var(--background-color));">►</button>
+        <button id='right-project-button' class="next-project-button next-project-button-right">►</button>
     </section>
 
     <!-- FOOTER -->
