--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -154,14 +154,7 @@
       </div>
       <button
         id="right-project-button"
-        class="next-project-button"
-        style="
-          background: linear-gradient(
-            to left,
-            var(--secondary-color),
-            var(--background-color)
-          );
-        "
+        class="next-project-button next-project-button-right"
       >
         ►
       </button>
