--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <div>
                 <h3>About me</h3>
                 <p>Hi there ! I'm a french student, currently enrolled at ENJMIN in Angoulême. I enjoy making video games and programming in general. Big Doctor Who and Percy Jackson fan, I also love playing narrative video games such as Outer Wilds, Disco Elysium or Detroit Become Human. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>   
-                <a href="html/about.html#about-me-section" class="btn-more">More &#10151;</a>
+                <a href="html/about.html#about-me-section" class="btn-more">More ►</a>
             </div>
             
             <div>
                 <h3>Experience</h3>
                 <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working at working at BlanketGames in Toulouse.</p>    
-                <a href="html/about.html#experience-section" class="btn-more">More &#10151;</a>
+                <a href="html/about.html#experience-section" class="btn-more">More ►</a>
             </div>
             
         </section>
