--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -31,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog"  style="height: calc(3vw * 9 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 9 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Pokemon Memory</h1>
     </section>
@@ -70,7 +70,7 @@
         <div style="width: 50%;  height: 100%; display: flex; justify-content: center; align-items: center;">
             <p id="right-project" class="next-project-title">Project2</p>
         </div>
-        <button id='right-project-button' class="next-project-button" style="background: linear-gradient(to left, var(--secondary-color), var(--background-color));">►</button>
+        <button id='right-project-button' class="next-project-button next-project-button-right">►</button>
     </section>
 
     <!-- FOOTER -->
