feat: wip luminar expedition + rolling food chain creation + wip nadir giant hunter

--- a/html/projects/video-games/rolling-food-chain.html
+++ b/html/projects/video-games/rolling-food-chain.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR | Luminar Expedition</title>
+    <title>Alvina DR | Rolling Food Chain</title>
 
     <link rel="stylesheet" href="../../../css/main.css">
     <link rel="stylesheet" href="../../../css/text.css">
@@ -34,12 +34,12 @@
     
     <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
-        <h1>Luminar Expedition</h1>
+        <h1>Rolling Food Chain</h1>
     </section>
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p id="hashtags"><b>C++</b> <b>No engine</b></p>
+            <p id="hashtags"><b>2024</b> <b>Unity</b> <b>GMTK</b></p>
             <p>At the end of 2023, I had the chance to participate in the <a class="link-in-text" href="https://www.ubisoft.com/en-us/company/careers/interns-graduates/develop-at-ubisoft" target="_blank">Develop At Ubisoft Program</a>.</p>
             <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window. This was a solo project done in a few months, only working in the evening and the weekend (all sounds and music are done by Mael Heurard though, big thanks to him).</p>
             <p>Your goal as the player is to secure most of the map to avoid slime spawn and free the caves. I wanted to convey the same feeling that I had playing Minecraft, a sense of safeness linked to the light.</p>
@@ -51,19 +51,6 @@
                 <img src="../../../img/video-games/luminar-expedition/le-playing.jpg" style="width: 49%;">
                 <img src="../../../img/video-games/luminar-expedition/le-trophy.jpg" style="width: 49%;">
             </div> 
-            <h3>Camera</h3>
-            <p>Since this was an exploration game I wanted the player to be able to move around quite far. So I decided to implement a camera system from zero. What happens is that I created a simmple movement system, and then substracted the position of the player to all the sprites on the screen. That way, the sprite of the player always stays in the center, and the whole environment moves.</p>
-            <p>This was simple but allowed for much more possibilities in terms of gameplay and exploration (the theme of the program was "space exploration" so it's quite handy). For the UI, all I had to do was to no substract the player position, and it would stay in place like normal.</p>
-            <h3>Lighting system</h3>
-            <p>Another interesting part of this project was the programming of the light. When you display a sprite with the API you can precise the color of the sprite, like some kind of filter. If you want it to look exactly like your image, you just display it with the color white. But if you want to show the player red when they get hit for example, then you can use a red filter.</p>
-            <h3>Collisions</h3>
-            <p>The API didn't have a collision system ready, so I also had to code my own.</p>
-            <h3>Contextual input</h3>
-            <p>One of the rule of this challenge was that we could only have two inputs, a Vector2 one for the 2D movement, and another one for whatever we wanted. But for what I had in mind the player could do three actions : mine, attack with a sword and build torches. Depending on the context, using the action button would make one of those actions. If the player was looking at a wall they would mine. If there was nothing in front of them they would attack. And if the player holds the button for a while then </p>
-            <h3>Procedural generation</h3>
-            <p>Since I didn't have a level editor, it was easier for me to just generate the environment procedurally. I didn't do anything fancy as I didn't have much time left.</p>
-            <h3>Autotiling system</h3>
-            <p></p>
         </div>
 
         <div class="div-column" style="width: 30%; margin-left : 50px;">
@@ -77,8 +64,7 @@
             </div>
 
             <div style="margin-top: 1rem;">
-                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Happy to announce I&#39;m part of the <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> program at <a href="https://twitter.com/UbisoftFR?ref_src=twsrc%5Etfw">@UbisoftFR</a> Bordeaux, thanks a lot to @CnamEnjmin for sharing the opportunity ! <br><br>I have a few months to make a game from scratch in C++, you can see my map editor below. <br><br>Now focusing on gameplay :) <a href="https://t.co/zpj10jaqtq">pic.twitter.com/zpj10jaqtq</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1724428613812945368?ref_src=twsrc%5Etfw">November 14, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Been working on my entry for <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> lately and I added camera and light systems. It&#39;s my first time doing all that without a game engine and in C++ so I&#39;m pretty happy with the result :)<a href="https://twitter.com/hashtag/gamedev?src=hash&amp;ref_src=twsrc%5Etfw">#gamedev</a> <a href="https://twitter.com/hashtag/cpp?src=hash&amp;ref_src=twsrc%5Etfw">#cpp</a> <a href="https://t.co/wi2OLEBSWx">pic.twitter.com/wi2OLEBSWx</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1732812619143110810?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Rolling Food Chain has ranked 184 out of 7000+ for the <a href="https://twitter.com/hashtag/GMTK2024?src=hash&amp;ref_src=twsrc%5Etfw">#GMTK2024</a> jam with <a href="https://twitter.com/hookariagames?ref_src=twsrc%5Etfw">@hookariagames</a> and @NamedZak. Got 60 ratings and 39 comments, thanks a lot to everyone that played the game :)<br><br>This was a good summer ☀️ <a href="https://t.co/VFNimMBHno">pic.twitter.com/VFNimMBHno</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1828715402270007804?ref_src=twsrc%5Etfw">August 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </section>
