--- a/html/projects/video-games/luminar-expedition.html
+++ b/html/projects/video-games/luminar-expedition.html
@@ -53,18 +53,25 @@
             </div> 
             <h3>Camera</h3>
             <p>Since this was an exploration game I wanted the player to be able to move around quite far. So I decided to implement a camera system from zero. What happens is that I created a simple movement system, and then substracted the position of the player to all the sprites on the screen. That way, the sprite of the player always stays in the center, and the whole environment moves.</p>
-            <p>This was simple but allowed for much more possibilities in terms of gameplay and exploration (the theme of the program was "space exploration" so it's quite handy). For the UI, all I had to do was to no substract the player position, and it would stay in place like normal.</p>
+            <p>This was simple but allowed for much more possibilities in terms of gameplay and exploration (the theme of the program was "space exploration" so it's quite handy). For the UI, all I had to do was to not substract the player position, and it would stay in place like normal.</p>
+            <h3>Grid and collision</h3>
+            <p>I created a Grid class that contains a list of Cell and different functions to find cells using their sprite position or directly the cells coordinates. A Cell is a class composed of two sprites : one for the ground, another for stuff on it like torches and ores. It also has a boolean to indicate whether it is collidable or not (which is used to know when the player can walk on a cell).</p>
+            <p>The API didn't have a collision system ready, so I also had to code my own. Using the boolean it was easy to know which cell was walkable or not. All I had to do was to find the one in front of the player depending on the direction they are moving (which was done by calculating the future potential position).</p>
             <h3>Lighting system</h3>
             <p>Another interesting part of this project was the programming of the light. When you display a sprite with the API you can precise the color of the sprite, like some kind of filter. If you want it to look exactly like your image, you just display it with the color white. But if you want to show the player red when they get hit for example, then you can use a red filter.</p>
-            <p></p>
-            <h3>Collisions</h3>
-            <p>The API didn't have a collision system ready, so I also had to code my own.</p>
+            <p>That's exactly what I used for my light system. Everything that is not in the light is going to have a black filter (which will make every tile look the same). Everything that is in the light will get a certain degree of white/black filter, being a little visible if far from light or fully white if next to it.</p>
+            <p>Since the game was using a grid, I needed to find a way of making a circle on it. I found a detailed article by <a class="link-in-text" href="https://www.redblobgames.com/" target="_blank">Red Blob Games
+            </a> on the subject that was really interesting and helpful : <a class="link-in-text" href="https://www.redblobgames.com/grids/circle-drawing/" target="_blank">Circle fill on a grid
+            </a></p>
             <h3>Contextual input</h3>
             <p>One of the rule of this challenge was that we could only have two inputs, a Vector2 one for the 2D movement, and another one for whatever we wanted. But for what I had in mind the player could do three actions : mine, attack with a sword and build torches. Depending on the context, using the action button would make one of those actions. If the player was looking at a wall they would mine. If there was nothing in front of them they would attack. And if the player holds the button for a while then a torch is built on the floor in front of them.</p>
-            <h3>Procedural generation</h3>
+            <h3>Procedural generation and autotiling system</h3>
             <p>Since I didn't have a level editor, it was easier for me to just generate the environment procedurally. I didn't do anything fancy as I didn't have much time left.</p>
-            <h3>Grid and autotiling system</h3>
-            <p>I made two layers, one for the ground and another for stuff on it, like torches and ores.</p>
+            <p>A system I really wanted for the game was autotiling. It makes the environment looks much more coherent. Since everyting was generated procedurally, it was an important feature to have a "clean" look. I did it with something approaching a flag system. Each wall tile check if their neighbor is also a wall. If that's the case for the tile on the left, we add 1. If it's the case for the tile above we add 2. If it's both you then get 3. Each combination of neighbors gives back a precise number, from which you can determine which sprite would fit best to this precise case.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/luminar-expedition/le-autotile.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/luminar-expedition/le-autotile-example.jpg" style="width: 49%;">
+            </div> 
         </div>
 
         <div class="div-column" style="width: 30%; margin-left : 50px;">
@@ -78,8 +85,9 @@
             </div>
 
             <div style="margin-top: 1rem;">
-                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Happy to announce I&#39;m part of the <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> program at <a href="https://twitter.com/UbisoftFR?ref_src=twsrc%5Etfw">@UbisoftFR</a> Bordeaux, thanks a lot to @CnamEnjmin for sharing the opportunity ! <br><br>I have a few months to make a game from scratch in C++, you can see my map editor below. <br><br>Now focusing on gameplay :) <a href="https://t.co/zpj10jaqtq">pic.twitter.com/zpj10jaqtq</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1724428613812945368?ref_src=twsrc%5Etfw">November 14, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Still a few days left before the end of the <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> program, will focus on the gameplay loop👀 <a href="https://t.co/LP7lrgeKsD">pic.twitter.com/LP7lrgeKsD</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1747262546355290526?ref_src=twsrc%5Etfw">January 16, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Been working on my entry for <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> lately and I added camera and light systems. It&#39;s my first time doing all that without a game engine and in C++ so I&#39;m pretty happy with the result :)<a href="https://twitter.com/hashtag/gamedev?src=hash&amp;ref_src=twsrc%5Etfw">#gamedev</a> <a href="https://twitter.com/hashtag/cpp?src=hash&amp;ref_src=twsrc%5Etfw">#cpp</a> <a href="https://t.co/wi2OLEBSWx">pic.twitter.com/wi2OLEBSWx</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1732812619143110810?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Happy to announce I&#39;m part of the <a href="https://twitter.com/hashtag/DevelopAtUbisoft?src=hash&amp;ref_src=twsrc%5Etfw">#DevelopAtUbisoft</a> program at <a href="https://twitter.com/UbisoftFR?ref_src=twsrc%5Etfw">@UbisoftFR</a> Bordeaux, thanks a lot to @CnamEnjmin for sharing the opportunity ! <br><br>I have a few months to make a game from scratch in C++, you can see my map editor below. <br><br>Now focusing on gameplay :) <a href="https://t.co/zpj10jaqtq">pic.twitter.com/zpj10jaqtq</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1724428613812945368?ref_src=twsrc%5Etfw">November 14, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </section>
