feat: more responsive grid + luminar expedition finished

--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -34,7 +34,7 @@
       </ul>
     </navbar>
 
-    <div class="grid grid-blog" style="height: calc(3vw * 21 + 0.1em)"></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
       <h1>Chloé au Musée</h1>
     </section>
