--- a/html/projects/video-games/creeping-deck.html
+++ b/html/projects/video-games/creeping-deck.html
@@ -31,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 21 + .1em); "></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
         <h1>Creeping Deck</h1>
     </section>
