--- a/html/projects/video-games/diver-down.html
+++ b/html/projects/video-games/diver-down.html
@@ -32,7 +32,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 20 + .1em); "></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
         <h1>Diver Down</h1>
     </section>
