--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -32,7 +32,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 28 + .1em);"></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
         <h1>Nadir Giant Hunter</h1>
     </section>
