--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
     </navbar>
     
-    <div class="grid grid-index-1" style="height: calc(3vw * 13 + .1em);"></div>
+    <div class="grid grid-index-1"></div>
     <section id="landing-section" style="padding-left: 10px;">
         <h1>Alvina</h1>
         <h3 style="font-weight: 300; margin-top: 0; font-size:large;">Damasio--Razafiarizaka</h3>
@@ -101,10 +101,10 @@
     <div class="scroll-text-div">
         <div style="width: 10000000px">
             <div class="scroll-text" >
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . LEVEL DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . TECH ART . TOOL DEVELOPMENT . PROTOTYPING . </h5>
             </div>
             <div class="scroll-text">
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . LEVEL DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . TECH ART . TOOL DEVELOPMENT . PROTOTYPING . </h5>
             </div>
         </div>
     </div>
