--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -32,7 +32,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 16 + .1em);"></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
         <h1>Chase Tag</h1>
     </section>
