--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -31,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 9 + .1em);"></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
         <h1>Pokemon Memory</h1>
     </section>
