--- a/html/projects/video-games/those-who-remain.html
+++ b/html/projects/video-games/those-who-remain.html
@@ -31,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 25 + .1em);"></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
         <h1>Those Who Remain</h1>
     </section>
